# fuqing-crm-analytics

./: .dockerignore  .env.example  .gitignore  .gitmessage  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_HISTORY.md  CLAUDE.md  CLEANUP_FINAL.md  Dockerfile  HANDOFF-FINAL-PROMPT-TO-CODEX-APP.md  HANDOFF-TO-CLAUDE-Sprint205-RFM-Timeout-502-2026-07-15.md  HANDOFF-TO-CODEX-Sprint50-L2-AST-Parser.md  HANDOFF-TO-CODEX-Sprint52.md  HANDOFF-TO-CODEX-Sprint53-race-flake.md  HANDOFF-TO-CODEX-Sprint53.5-L3-FilterBuilder.md  HANDOFF-TO-CODEX.md  HANDOFF.md  HANDOVER.md  README.md  START.sh  STATUS.md  SamplingView.vue  VERSION  docker-compose-postgresql16-citus-cluster.yml  docker-compose-postgresql16-single-node.yml  docker-compose.trino-cluster.yml  docker-compose.trino.yml  docker-compose.yml  export_category_r_analysis.py  pyproject.toml  requirements-e2e.txt  requirements-lock.txt  requirements.txt  start-all.command  start.bat  strategy_config.yaml
.claude/: settings.json
.githooks/: README.md  check_imports.py  check_review_ground_truth.py  check_test_order.py  commit-msg  post-merge  pre-commit  pre-push
.github/: pull_request_template.md
.github/workflows/: e2e-smoke.yml  e2e.yml  lint.yml  nightly.yml  pre-commit.yml  weekly-report.yml
backend/: README.md  __init__.py  config.py  database.py  main.py
backend/contracts/: __init__.py  _lint.py  admin.py  asset.py  audience.py  breakdown.py  category.py  churn.py  cohort_retention.py  common.py  flow.py  geo.py  health.py  lifetime_value.py  metrics.py  rfm.py  rfm_segments.py  sampling.py  schemas.py  types.py  visitor.py
backend/db/: connection.py  (+2 more)
config/: health_config.json
core/: BUGFIX_2026-04-06.md  MEMO_2026-06-01.md  MEMO_2026-06-02.md
docs/: ARCHITECTURE.md  AUTOMATION.md  CACHE-INVALIDATION.md  CI-DEFENSE-PLAYBOOK.md  CI-E2E-HISTORY.md  CI-PRECOMMIT.md  DATA-SOURCE-MAP.md  DEPLOY-WINDOWS.md  DEPLOY.md  DISASTER-RECOVERY.md  DOCUMENT-INDEX.md  ETL-CACHE-INVALIDATION.md  FIX-TASK-LIST.md  FOLLOWUPS.md  FRONTEND-TYPES-GEN.md  HANDOVER.md  HOOKS-CHOICE.md  MIGRATION-CHECKLIST.md  MODULE-INDEX.md  OPERATIONS.md  PRD-v2.0.md  PRD-v3.0.md  PRD.md  PRE-COMMIT.md  QA-v3.0-architecture-2026-04-16.md  README.md  SHIP.md  SPRINT-1-RETROSPECTIVE.md  SPRINT-10-PLAN.md  SPRINT-10-RETROSPECTIVE.md  SPRINT-11-RETROSPECTIVE.md  SPRINT-12-PLAN.md  SPRINT-12-RETROSPECTIVE.md  SPRINT-13-PLAN-RATIO-GOVERNANCE.md  SPRINT-14-5-RETROSPECTIVE.md  SPRINT-14-PLAN-RATIO-STAGE2.md  SPRINT-14-RETROSPECTIVE.md  SPRINT-15-PLAN-RATIO-AUDIT.md  SPRINT-16-5-B2-AUDIT.md  SPRINT-16-5-README.md  (+48 more)
frontend-vue3/: .gitignore  Dockerfile  README.md  REPAIR_PLAN.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
reports/: category-repurchase-analysis-report.md
scraper/: .env.example  .gitignore  CLAUDE.md  KB-数据采集-SPA接口拦截.md  README.md  requirements.txt
scripts/: ad_hoc_query.py  ad_hoc_query_excel_styles.py  adhoc_query_hitrate_monitor.py  archive_changelog.py  branch_cleanup.py  check_db_size.py  check_duckdb_release.py  check_remaining_tasks.py  ci_cross_sprint_drift.py  clickhouse_poc_monitor.py  commit_msg_check.py  docker-entrypoint.sh  duckdb_lock_model_verification.py  dump_duckdb_snapshot.py  e2e_workbuddy_test.py  etl_status_override.py  gen-frontend-types.sh  measure_duckdb_perf.py  memory_size_monitor.py  migrate_views.py  post_push_restart_uvicorn_verify.sh  pre_existing_fail_monitor.py  precompute_category_churn.py  precompute_category_flow.py  precompute_old_customer_9_sub_modules.py  preload_rfm.py  query_worker.py  run_backend_tests_bounded.py  run_etl.py  session_close_check.py  session_start_check.py  setup-hooks.sh  start_uvicorn.py  status_update.py  sync-agents.sh  test-precommit.sh  test_channel_judge.py  test_channel_rebuild.py  uvicorn_launchd.py  validate_etl_fix.sql  (+1 more)
tests/: conftest.py  test_breakdown_service.py  test_category_remaining.py  test_category_service.py  test_etl_atomicity.py  test_health_conversion.py  test_health_overview.py  test_health_repurchase.py  test_health_tier_flow.py  test_rfm_analysis.py  test_rfm_service.py  test_sanity_check.py
trino-coordinator/: config.properties  node.properties  resource-groups.json
trino-worker/: config.properties  jvm.config  node.properties
workflows/: dmp-data-fix.js  dmp-data-verify.js
(+900 files in other folders)
