[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fuqing-crm-analytics"
version = "2.0.0"
description = "芙清 CRM 客户分析系统"
requires-python = ">=3.13"

[tool.uv]
python-preference = "only-managed"

[tool.ruff]
# 2026-06-02 scraper/ 代码治理完成：从 DMP_test_package 物理合并过来的 19 个 pre-existing
# lint 错误（E402/F401/F541/F811/F841）已全部修复（fix/scraper-lint-cleanup 分支）。
# scraper/ 重新纳入顶层 ruff check，pyproject.toml 不再需要单独 exclude。
exclude = ["scripts/archive/*"]

[tool.ruff.lint.per-file-ignores]
# health.py: intentional import-after-logger for fail-fast API key check
"backend/routers/health.py" = ["E402"]
# config.py: datetime import below default-date utility section
"backend/config.py" = ["E402"]
# main.py: CORS config imports and router registration imports
"backend/main.py" = ["E402"]
# ETL scripts: sys.path.insert must come before project imports
"scripts/etl/*.py" = ["E402"]
# Test files: sys.path.insert must come before project imports
"tests/*.py" = ["E402"]
"backend/tests/*.py" = ["E402"]

# ── pytest 配置 ───────────────────────────────────────────────
# P1-2 Sprint 3: 限制默认 test 收集范围到 backend/tests/
# 原因: ./tests/ 根目录的 16 个 legacy 测试 (test_breakdown_service 等) 依赖
# 真实 DuckDB 文件 data/processed/fuqing_crm.duckdb, 与 uvicorn dev 进程
# (PID 66129) 持 41GB 锁冲突, 本地 pytest ./tests/ 必失败 (DuckDB IOException)。
# CI 已显式指定 pytest backend/tests/ -x -q, 加 testpaths 让本地默认行为对齐 CI。
# 显式调用 `pytest ./tests/` 仍可用, 只是不再默认扫根目录。
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = ["-ra", "--strict-markers", "--disable-warnings"]
