[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fuqing-crm-analytics"
version = "2.0.0"
description = "芙清 CRM 客户分析系统"
requires-python = ">=3.13"

[tool.uv]
python-preference = "only-managed"

[tool.ruff]
# 2026-06-02 scraper/ 代码治理完成：从 DMP_test_package 物理合并过来的 19 个 pre-existing
# lint 错误（E402/F401/F541/F811/F841）已全部修复（fix/scraper-lint-cleanup 分支）。
# scraper/ 重新纳入顶层 ruff check，pyproject.toml 不再需要单独 exclude。
exclude = ["scripts/archive/*"]

[tool.ruff.lint.per-file-ignores]
# health.py: intentional import-after-logger for fail-fast API key check
"backend/routers/health.py" = ["E402"]
# config.py: datetime import below default-date utility section
"backend/config.py" = ["E402"]
# main.py: CORS config imports and router registration imports
"backend/main.py" = ["E402"]
# ETL scripts: sys.path.insert must come before project imports
"scripts/etl/*.py" = ["E402"]
# Test files: sys.path.insert must come before project imports
"tests/*.py" = ["E402"]
"backend/tests/*.py" = ["E402"]

# ── pytest 配置 ───────────────────────────────────────────────
# Sprint 8 P1: 删 testpaths, 恢复 pytest auto-discovery (./tests/ + backend/tests/)
# 历史:
#   Sprint 3 P1-2 (83d000c) 加 testpaths = ["backend/tests"] 绕开 16 个 root test
#   跟 uvicorn dev 进程的 DuckDB 锁冲突 (本地 ./tests/ 必失败 IOException)。
#   Sprint 7 P0 治根后 16 root test 全部跑通, ignore 路线已不需要。
#   CI 显式调用 `pytest backend/tests/ -x -q` + `pytest ./tests/ -q`,
#   删 testpaths 让本地默认行为对齐 auto-discovery。
[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--disable-warnings"]
